--- a/src/assets/styles/app.css
+++ b/src/assets/styles/app.css
@@ -1,8 +1,12 @@
 @media (min-width: 420px) {
   html, body, #root {
-    height: 100%;
     min-width: 1220px;
   }
+}
+
+html, body, #root {
+  min-height: 100%;
+  height: 1px;
 }
 
 @import url('https://rsms.me/inter/inter.css');
