--- a/src/assets/styles/app.css
+++ b/src/assets/styles/app.css
@@ -9,6 +9,9 @@ html, body, #root {
   height: 1px;
 }
 
+#root {
+  background: #141414;
+}
 @import url('https://rsms.me/inter/inter.css');
 html { font-family: 'Inter', sans-serif; }
 @supports (font-variation-settings: normal) {
